--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -160,7 +160,7 @@ footer .footer-button:hover {
     display: grid;
     grid-template-columns: 1fr;
     padding: 0 16px;
-    gap: 50px;
+    gap: 60px 30px;
     padding-top: 66px;
     padding-bottom: 80px;
     max-width: 1110px;
@@ -193,7 +193,7 @@ footer .footer-button:hover {
 /* tablet */
 @media (min-width: 600px) {
     header,
-    footer {
+    #footer-content {
         padding: 36px 40px;
     }
 
@@ -241,7 +241,7 @@ footer .footer-button:hover {
 /* desktop */
 @media (min-width: 1150px) {
     header,
-    footer {
+    #footer-content {
         padding: 32px 165px;
     }
 
